--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@tailwindcss/vite": "^4.0.1",
+    "framer-motion": "^12.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.1.5"
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
@@ -30,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.x",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.x",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
