--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
+    "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.7"
