--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "react-router-dom": "^7.1.5",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.3",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "sonner": "^1.7.4",
     "swiper": "^8.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
@@ -40,7 +43,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.x",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
   }
