--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
     "declaration": true,
     "emitDeclarationOnly": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-    "types": ["node"]
+    "rootDir": "./src"
   },
   "include": ["src"]
 }
