--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@reduxjs/toolkit": "^2.5.1",
+    "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.1",
     "@toolpad/core": "^0.12.0",
+    "firebase": "^11.3.0",
     "framer-motion": "^12.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
