--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@nivo/bar": "^0.88.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.1",
@@ -28,6 +29,7 @@
     "react-router-dom": "^7.1.5",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.3",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.7.4",
@@ -36,10 +38,11 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.6",
     "@types/react-loader-spinner": "^3.1.3",
     "@types/react-slick": "^0.23.13",
+    "@types/recharts": "^1.8.29",
     "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
@@ -49,7 +52,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3",
+    "typescript": "^5.5.3",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
   }
