--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@toolpad/core": "^0.12.0",
     "firebase": "^11.3.0",
     "framer-motion": "^12.0.6",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
